--- a/templates/base.html
+++ b/templates/base.html
@@ -58,10 +58,10 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About</a>
+                            <a href="{% url 'SiteSettings:about' %}" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="{% url 'SiteSettings:contact' %}" class="nav-link">Contact</a>
                         </li>
                         {% if request.user.is_authenticated and request.user.role == 'employer' %}
                         <li class="nav-item dropdown">
