--- a/templates/base.html
+++ b/templates/base.html
@@ -118,8 +118,8 @@
                             <a id="pages" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"></i>Sign Up
                             </a>
                             <div aria-labelledby="pages" class="dropdown-menu">
-                                <a href="{% url 'accounts:employee-register' %}" class="dropdown-item">Employee</a>
-                                <a href="{% url 'accounts:employer-register' %}" class="dropdown-item">Employers</a>
+                                <a href="{% url 'accounts:employee-register' %}" class="dropdown-item">As A Student</a>
+                                <a href="{% url 'accounts:employer-register' %}" class="dropdown-item">As An Employer</a>
                             </div>
                         </li>
                         <li class="nav-item" style="color: #fff">
