--- a/templates/home.html
+++ b/templates/home.html
@@ -44,25 +44,30 @@
             {% for job in jobs %}
             <div class="col-lg-3 mb-5 mb-lg-0">
                 <div class="box-image-text bg-visible full-height">
-                    <div class="top">
+                    <!-- <div class="top">
                         <a href="#">
                             <div class="image">
                                 <img src="{% static 'img/featured1.jpg' %}" alt="" class="img-fluid">
                             </div>
                             <div class="bg"></div>
-                            <!-- <div class="logo">
+                            <div class="logo">
                                 <img src="{% static 'img/company-1.png' %}" alt="" style="max-width: 80px;">
-                            </div> -->
+                            </div>
                         </a>
-                    </div>
+                    </div> -->
                     <div class="content">
-                        <h5><a href="{% url 'jobs:jobs-detail' job.id %}">{{ job.title }}</a></h5>
+                        <div>
+                            <h5><a href="{% url 'jobs:jobs-detail' job.id %}">{{ job.title }}</a></h5>
+                        </div>
                         <p class="featured__details"><i class="fa fa-map-marker job__location"></i> {{ job.location }} {% if job.type == '1' %}
-                            <span class="badge featured-badge badge-success">Full time</span> {% elif job.type == '2' %}
-                            <span class="badge featured-badge badge-primary">Part time</span> {% else %}
-                            <span style="color: #ffffff;" class="badge featured-badge badge-warning">Internship</span> {% endif %}
+                            <span class="badge featured-badge badge-success">Paid</span> {% elif job.type == '2' %}
+                            <span class="badge featured-badge badge-primary">Unpaid</span> {% else %}
+                            <span style="color: #ffffff;" class="badge featured-badge badge-warning">Paid</span> {% endif %}
                         </p>
-                        <p>{{ job.description }}</p>
+                        <p><i class="fa fa-money"></i> {{ job.salary }}</p>
+                        <p><i class="fa fa-building"></i> {{ job.user.first_name }}</p>
+                        <a><button class="btn btn-outline-white-primary">Read More</button></a>
+                        <!-- <p>{{ job.description|safe|truncatechars:40 }}</p> -->
                     </div>
                 </div>
             </div>
@@ -86,23 +91,23 @@
                                 <a href="{% url 'jobs:jobs-detail' trending.id %}">{{ trending.title }}</a>
                             </h4>
                             <p class="job__company">
-                                {{ trending.company_name }}
-                            </p>
+                                <i class="fa fa-building"></i><span> {{ trending.company_name }}
+                                </span></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-10 col-md-3 col-lg-2 ml-auto"><i class="fa fa-map-marker job__location"></i> {{ trending.location }}
+                <div class="col-10 col-md-4 col-lg-2 ml-auto"><i class="fa fa-map-marker job__location"></i> {{ trending.location }}
                 </div>
                 <div class="col-10 col-md-3 col-lg-3 ml-auto">
                     <p>Posted {{ trending.created_at|timesince }}</p>
                 </div>
-                <div class="col-sm-12 col-md-2 col-lg-1">
+                <!-- <div class="col-sm-12 col-md-2 col-lg-1">
                     <div class="job__star">
                         <a href="#" data-toggle="tooltip" data-placement="top" title="Save to favourites" class="job__star__link">
                             <i class="fa fa-star"></i>
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         {% endfor %}
