joblist, job create html

--- a/templates/jobs/jobcreate.html
+++ b/templates/jobs/jobcreate.html
@@ -13,11 +13,10 @@
         margin-bottom: 1rem;
         margin-left: 1.5rem;
     }
-    
-    .login-form input {
+    /* .login-form input {
         width: 100%;
         background-color: transparent;
-        border: 1px solid #23A8B1;
+        border: 1px solid #ffc06f;
         border-radius: 1px;
         line-height: 23px;
         padding: 10px 20px;
@@ -25,7 +24,9 @@
         color: #7a7a7a;
         margin-bottom: 15px;
         column-gap: 1.5rem;
+        height: 3.2em;
     }
+     */
     
     button,
     input,
@@ -33,14 +34,15 @@
     select,
     textarea {
         margin: 0;
-        font-family: 'Times New Roman', Times, serif;
+        padding-left: 1em;
         width: 100%;
-        background-color: transparent;
-        border: 1px solid #23A8B1;
-        border-radius: 1px;
+        background-color: rgb(238, 238, 238);
+        border: 2px solid #ffc06f;
+        border-radius: 5px;
         line-height: 23px;
         margin-bottom: 15px;
         column-gap: 1.5rem;
+        height: 2.8em;
     }
 </style>
 {% endblock %} {% block content %}
